# nesmachine

./: .gitignore  Cargo.toml  README.md  index.html  nesmachine-gui-3d8c5038716d59c.js  nesmachine-gui-3d8c5038716d59c_bg.wasm
.github/workflows/: pages.yml
crates/nesmachine-gui/: Cargo.toml  index.html
crates/nesmachine-gui/src/: main.rs  playback_state.rs
crates/nesmachine-gui/src/components/: scrollslider.rs
crates/nesmachine-gui/src/emu_ui/: mem_browser.rs  menu_bar.rs  mod.rs
crates/nesmachine-gui/src/gui/: cpu_browser.rs  cpu_inspector.rs  dialogs.rs  display.rs  keyboard_shortcuts.rs  mem_browser.rs  menu_bar.rs  mod.rs  playback_control.rs  ppu_browser.rs  ppu_inspector.rs  ppu_nametable_inspector.rs  ppu_pattern_inspector.rs
crates/nesmachine-gui/src/gui/components/: mod.rs  scrollslider.rs
crates/nesmachine-gui/src/ui_panes/: cpu_inspector.rs  mem_browser.rs  mod.rs
crates/nesmc-disassembler/: Cargo.toml
crates/nesmc-disassembler/src/: cpu_addresses.rs  instruction.rs  lib.rs  operand.rs  ppu_addresses.rs
crates/nesmc-emu/: Cargo.toml
crates/nesmc-emu/src/: lib.rs
crates/nesmc-emu/src/nes_machine/: error.rs  mod.rs
crates/nesmc-types/: Cargo.toml
crates/nesmc-types/src/: instruction.rs
graphics/: vegetable.blend  vegetable.blend1
src/: README.md  emulator.rs  gui.rs  main.rs
src/emulator/: apu.rs  bus.rs  bus_debug.rs  controller.rs  cpu.rs  emu_debug.rs  loader.rs  ppu.rs
src/emulator/cpu/: instruction_match.rs  instructions.rs
src/gui/: file_actions.rs  gui_emulator.rs
src/gui/gui_emulator/: instruction_parser.rs
(+25 files in other folders)
