[workspace]
resolver = "2"
members = [
    # bin
    "crates/nesmachine-gui",

    # lib
    "crates/nesmc-disassembler",
    "crates/nesmc-emu",
    "crates/nesmc-types",
]

[workspace.dependencies]
nesmc-disassembler = { path = "crates/nesmc-disassembler" }
nesmc-emu = { path = "crates/nesmc-emu" }
nesmc-types = { path = "crates/nesmc-types" }

[workspace.package]
edition = "2024"
version = "0.1.0"
