[package]
name = "nesmachine-gui"
edition.workspace = true
version.workspace = true

[dependencies]
nesmc-disassembler = { workspace = true }
nesmc-emu = { workspace = true }

eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"
rfd = "0.15.3"
egui_tiles = "0.12.0"
egui-toast = "0.17.0"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.13.1"
poll-promise = { version = "0.3.0", features = ["async-std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
log = "0.4.27"
poll-promise = { version = "0.3.0", features = ["web"] }
